<resources>
    <string name="app_name">EaptekaTests</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">далее</string>
    <string name="profile">Профиль</string>
    <string name="edit_data">Редактировать контактные данные</string>
    <string name="notification_icon">Notification icon</string>
    <string name="hello_user">Здравствуйте, Юлия!</string>
    <string name="score">0 баллов</string>
    <string name="mood">mood</string>
    <string name="go_to_tests">Перейти к тестам</string>
    <string name="user_city">Город: Москва и область</string>
    <string name="delivery">Доставка 24/7</string>
    <string name="pay">Оплата</string>
    <string name="self_delivery">Самовывоз из аптек</string>
    <string name="online_pay_instruction">Как оплатить заказ онлайн</string>
    <string name="contacts">Контакты</string>
    <string name="about_company">О компании</string>
    <string name="app_version">Версия 4.7.8</string>
    <string name="exit">ВЫХОД</string>
    <string name="your_test_result">ВАШ РЕЗУЛЬТАТ:</string>
    <string name="medicine">Лекарство</string>
    <string name="current_tests">Текущие и рекомендуемые тесты:</string>
    <string name="finished_tests">Пройденные тесты:</string>
    <string name="progress">1/4</string>
    <string name="achievements">Ваши достижения:</string>
    <string name="current_achievement">Пройти 5 тестов</string>
    <string name="instruction">Инструкция по применению:</string>
    <string name="start_test">Пройти тест</string>
    <string name="base">Имеются противопоказания. Необходимо проконсультироваться со специалистом.</string>
    <string name="you_got_scores">Начислено n баллов</string>

    <string name="info_name">Название препарата:</string>
    <string name="info_form">Форма выпуска:</string>
    <string name="info_life">Срок годности:</string>
    <string name="info_substance">Активное вещество:</string>
    <string name="info_testimony">Показания:</string>
    <string name="info_apply">Способ применения:</string>
    <string name="info_storage">Способ хранения:</string>

    <string name="info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
</resources>