<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="16sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_notifications"
            android:contentDescription="@string/notification_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/edit_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/edit_data"
        android:textColor="@color/purple"
        android:textSize="14sp"
        app:drawableRightCompat="@drawable/ic_arrow_right"
        app:layout_constraintTop_toBottomOf="@+id/profile_layout" />

    <LinearLayout
        android:id="@+id/user_name_and_score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_data_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hello_user"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/score_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/round_form"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/score"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mood_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/user_name_and_score_layout">

        <ImageView
            android:id="@+id/mood_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mood_very_happy"
            android:contentDescription="@string/mood" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_tests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_form"
        android:text="@string/go_to_tests"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/mood_layout" />

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_tests">

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/user_city"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/delivery"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/self_delivery"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/pay"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/online_pay_instruction"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/contacts"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/about_company"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/item_of_profile_list"
            android:text="@string/app_version"
            android:textColor="@color/darkGrey"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/exit"
        android:textColor="@color/darkPurple"
        android:shadowColor="@color/white"
        style="?android:attr/borderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>