<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/info_top_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="18dp">

        <ImageButton
            android:id="@+id/return_to_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <com.eapteka.eaptekatests.custom_view.CustomGradientTextView
            android:id="@+id/start_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/start_test" />


    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/info_top_menu" />

    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/base"
        app:layout_constraintTop_toTopOf="@+id/line">

        <com.eapteka.eaptekatests.custom_view.CustomGradientTextView
            android:id="@+id/finished_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/instruction"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideInset"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/base"
                app:layout_constraintTop_toTopOf="@+id/line">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/info_name"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_form"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_form"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_life"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_life"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_substance"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_substance"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/substance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_testimony"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_testimony"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/testimony"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_apply"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_apply"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/info_storage"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_storage"
                android:textColor="@color/purple"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/storage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <com.eapteka.eaptekatests.custom_view.CustomGradientTextView
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/base"
        android:textSize="10sp" />

</androidx.constraintlayout.widget.ConstraintLayout>