<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tests_top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="18dp">

        <ImageButton
            android:id="@+id/return_to_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />


        <TextView
            android:id="@+id/score_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_form"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/score"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_plus" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_first_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_second_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/tests_top_menu" />

    <LinearLayout
        android:id="@+id/tests_lists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line">

        <com.eapteka.eaptekatests.custom_view.CustomGradientTextView
            android:id="@+id/finished_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/finished_tests"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finished_tests_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:overScrollMode="never"
            android:padding="8dp"
            tools:listitem="@layout/finished_test" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple" />

        <com.eapteka.eaptekatests.custom_view.CustomGradientTextView
            android:id="@+id/current_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/current_tests"
            android:layout_marginHorizontal="14dp"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/started_tests_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            app:layout_anchor="@+id/linearLayout"
            app:layout_anchorGravity="bottom|center"
            tools:listitem="@layout/started_test" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>